2004-01-23  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2004-01-22  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Fix eos bug spotted by synap.

2004-01-22  Jorn Baayen  <jorn@nl.linux.org>

	* Makefile.am:
	* configure.in:
	* muine.spec.in:

	Added a spec file by Link Dupont <link@subpop.net>

2004-01-22  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Make artist and title labels selectable.

2004-01-22  Jorn Baayen  <jorn@nl.linux.org>

	* AUTHORS:
	* NEWS:
	* README:
	* TODO:
	* configure.in:
	* data/glade/GroupsWindow.glade:
	* data/glade/Makefile.am:
	* src/About.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Add preliminary GroupsWindow interface, and release 0.2.

2004-01-22  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Add missing ProgressWindow.Done ()

2004-01-22  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/ProgressWindow.glade:
	* src/ProgressWindow.cs:

	Progress window polish.

2004-01-22  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/SearchMusicWindow.glade:
	* data/muine.schemas.in:
	* src/FileSelector.cs:
	* src/PlaylistWindow.cs:
	* src/SearchMusicWindow.cs:

	The first time window will now check if ~/Music exists,
	and use that if it does. Otherwise it will search the homedir.

	Also set the deafult playlist filesel folders to ~/Playlists/

2004-01-22  Viet Yen Nguyen  <nguyen@cs.utwente.nl>
            Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/Makefile.am:
	* data/glade/SearchMusicWindow.glade:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	* src/SearchMusicWindow.cs:
	* src/SongDatabase.cs:

	First time "Search music" window.

2004-01-21  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/rb-cell-renderer-pixbuf.c:
	(rb_cell_renderer_pixbuf_render):

	Replace deprecated gdk_pixbuf_render_to_drawable_alpha

2004-01-21  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/PlaylistWindow.glade:
	* src/PlaylistWindow.cs:

	Get rid of messy volume menu.