@@ -1,3 +1,11 @@
+2004-01-23  Jorn Baayen  <jorn@nl.linux.org>
+
+	* src/Muine.cs:
+	* src/PlaylistWindow.cs:
+
+	Restore playlist on startup. (But only the songs that are
+	left to be played)
+
 2004-01-23  Danilo Šegan  <dsegan@gmx.net>
 
 	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.
